update fence
